--- a/api/package.json
+++ b/api/package.json
@@ -38,7 +38,8 @@
     "mongoose": "^7.8.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
