--- a/api/package.json
+++ b/api/package.json
@@ -39,7 +39,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
