--- a/api/package.json
+++ b/api/package.json
@@ -40,7 +40,9 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^7.0.6",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
